<resources>
    <string name="app_name">CSCB07 Summer</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">Register</string>
    <string name="doctor_sign_in">Sign in as a Doctor</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register_page_title">Register</string>
    <string name="retype_password">Please re-enter password</string>
    <string name="enter_birthdate">Enter birthdate (mm/dd/yyyy)</string>
    <string name="enter_name">Please enter your name</string>
    <string name="enter_gender">Please select your gender</string>
    <string name="enter_specialization">Please enter your specializations</string>
    <string name="submit_and_register">Submit and Register</string>
    <string-array name="gender_spinner">
        <item>Please select your gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <!-- Strings related to patient's profile -->
    <string name="PatientTitle">My Profile</string>
    <string name="PatientName">Name</string>
    <string name="PatientEmail">Email</string>
    <string name="PatientGender">Gender</string>
    <string name="PatientBirth">Birth date</string>
    <string name="PatientEdit">Edit</string>
    <string name="MedicalConditions">Medical Conditions</string>
    <string name="ConditionPara">I have Diabetes, Alzheimer\'s, and \nhigh blood pressure</string>
    <string name="PatientDoctorList">View doctor list</string>
    <!-- Strings related to patient's profile editing page -->
    <string name="PatientEditName">Name</string>
    <string name="PatientEditEmail">Email</string>
    <string name="PatientEditGender">Gender</string>
    <string name="PatientEditBirthdate">Birth date</string>
    <string name="PatientEditDone">Done</string>


    <string name="doctor_register">Register as a Doctor</string>
    <string name="title_activity_doctor_register_code">Doctor_register_code</string>
    <string name="enter_verification_code">Enter_your_code</string>
    <string name="title_activity_recover_password">Recover_password</string>
    <string name="send_email">Send email</string>
    <string name="enter_email">Please enter your email</string>
    <string name="DoctorName">Dr. FullName</string>
    <string name="ChangeEdit">Save</string>
    <string name="ProfileName">Profile Name</string>
    <string name="DoctorEditSave">Save</string>
    <string name="DoctorEditName">Change Name</string>
    <string name="DoctorEditEmail">Change Email</string>
    <string name="DoctorEditSpecialization">Change Specialization</string>
    <string name="ProfileImageDescription">Profile Image</string>
    <string name="DoctorEmail">Email</string>
    <string name="DoctorBirthday">Date of Birth</string>
    <string name="DoctorSpecialization">Specialization</string>
    <string name="DoctorEditBirthday">mm/dd/yyyy</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="DoctorGender">Sex</string>
    <string name="DoctorChangeSex">Sex:</string>
    <string name="DoctorChangeBirthday">Date of Birth:</string>
    <string name="Appointments">Appointments</string>
    <string name="DoctorPatientList">Patient List</string>
    <string name="Profile">Profile</string>
    <string name="Logout">Logout</string>
    <string name="bookAppointment">Book Appointment</string>
    <string name="Exit">Exit</string>
    <string name="Booking">Book</string>
    <string name="AvailableTime">Availability</string>
    <string name="patientLogout">Logout</string>
    <string name="BookAppointment">Book Appointment</string>

    <string name="DeleteAccount">Delete Account</string>

    <string name="Timeslot1">Mon 9-10</string>
    <string name="Timeslot2">Mon 11-12</string>
    <string name="Timeslot3">Mon 3-4</string>
    <string name="Timeslot4">Tue 1-2</string>
    <string name="Timeslot5">Tue 3-4</string>
    <string name="Timeslot6">Tue 4-5</string>
    <string name="Timeslot7">Thu 11-12</string>
    <string name="Timeslot8">Thu 3-4</string>
    <string name="Timeslot9">Fri 1-2</string>
    <string name="Timeslot10">Fri 3-4</string>
    <string name="PatientPast">Past Appointments</string>
    <string name="PatientUpcoming">Upcoming Appointments</string>

</resources>